# practice_mahjong_app

./: .gitignore  README.md  pyproject.toml
src/: README.md  main.py
