[project]
name = "practice-mahjong-app"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "sergicalsix", email = "kenp3434membertip1@gmail.com" }
]
dependencies = [
    "gradio>=4.16.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
hello = "practice_mahjong_app:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/practice_mahjong_app"]
